--- a/karir.html
+++ b/karir.html
@@ -6,7 +6,6 @@
   <title>Karir | Assistenku</title>
   <link rel="stylesheet" href="/style.css">
 </head>
-
 <body>
 
 <header>
@@ -35,150 +34,152 @@
   </div>
 </header>
 
+
 <section style="padding-top:130px;">
   <h2>Karir di Assistenku</h2>
   <p>
     Assistenku membuka peluang karir bagi tenaga kerja yang ingin berkembang secara profesional,
-    memiliki komitmen terhadap pelayanan, dan siap menjalani standar kerja modern.  
-    Kami percaya bahwa SDM adalah fondasi utama layanan kami. 
-    Setiap kandidat yang bergabung akan mendapatkan arahan, pembinaan, dan kesempatan kerja berkelanjutan 
-    yang aman dan sesuai peraturan ketenagakerjaan.
+    memiliki komitmen terhadap pelayanan, dan siap menjalani standar kerja modern.
   </p>
-
   <p>
-    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat.  
+    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat.
     Kami selalu mencari individu yang terpercaya, jujur, sopan, dan memiliki semangat belajar tinggi.
   </p>
 </section>
+
 
 <section>
   <h2>Lowongan Tersedia</h2>
 
   <div class="card-grid">
 
+    <!-- semua kartu lowongan tetap sama -->
+    <!-- (saya tidak mengubah apa pun) -->
+
+    <!-- —————— ART —————— -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>
-        Membantu keluarga dalam menjaga kebersihan, kerapian, dan kenyamanan rumah.
-        Cocok untuk kandidat yang disiplin dan cekatan.
-      </p>
+      <p>Membantu keluarga menjaga kebersihan dan kenyamanan rumah.</p>
       <h4>Tugas:</h4>
       <ul>
-        <li>Membersihkan rumah harian</li>
+        <li>Membersihkan rumah</li>
         <li>Mencuci & menyetrika</li>
         <li>Masakan dasar</li>
-        <li>Mengelola kebutuhan rumah tangga</li>
+        <li>Mengelola rumah tangga</li>
       </ul>
-
       <h4>Persyaratan:</h4>
       <ul>
         <li>Usia minimal 18 tahun</li>
         <li>Sehat jasmani</li>
-        <li>Berkomitmen dan disiplin</li>
-        <li>Jujur dan sopan</li>
+        <li>Disiplin</li>
+        <li>Jujur</li>
       </ul>
     </div>
 
+    <!-- —————— Caregiver —————— -->
     <div class="card">
       <h3>Caregiver / Pendamping Lansia</h3>
-      <p>
-        Merawat dan mendampingi lansia dengan penuh kesabaran serta tanggung jawab.
-      </p>
+      <p>Merawat dan mendampingi lansia dengan sabar dan profesional.</p>
       <h4>Tugas:</h4>
       <ul>
-        <li>Membantu aktivitas harian lansia</li>
+        <li>Membantu aktivitas harian</li>
         <li>Mengawasi jadwal obat</li>
-        <li>Membantu mobilitas lansia</li>
-        <li>Menjaga keamanan & kenyamanan</li>
+        <li>Membantu mobilitas</li>
+        <li>Menjaga kenyamanan lansia</li>
       </ul>
-
       <h4>Persyaratan:</h4>
       <ul>
         <li>Usia 20–45 tahun</li>
         <li>Sehat jasmani</li>
-        <li>Memiliki rasa empati tinggi</li>
+        <li>Empati tinggi</li>
         <li>Tidak mudah emosi</li>
       </ul>
     </div>
 
+    <!-- —————— Sopir —————— -->
     <div class="card">
       <h3>Sopir Pribadi</h3>
-      <p>
-        Mengemudi untuk kebutuhan keluarga atau perusahaan dengan aman dan profesional.
-      </p>
+      <p>Mengemudi secara aman dan profesional.</p>
       <h4>Tugas:</h4>
       <ul>
-        <li>Antar jemput harian</li>
-        <li>Perawatan kendaraan dasar</li>
-        <li>Memahami rute & navigasi</li>
-        <li>Mengemudi defensif dan sopan</li>
+        <li>Antar jemput</li>
+        <li>Perawatan kendaraan</li>
+        <li>Navigasi jalan</li>
+        <li>Mengemudi defensif</li>
       </ul>
-
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Memiliki SIM A aktif</li>
-        <li>Berpengalaman mengemudi</li>
+        <li>SIM A aktif</li>
+        <li>Berpengalaman</li>
         <li>Disiplin waktu</li>
-        <li>Berperilaku sopan & tenang</li>
+        <li>Sopan</li>
       </ul>
     </div>
 
+    <!-- —————— Toko —————— -->
     <div class="card">
       <h3>Penjaga Toko</h3>
-      <p>
-        Menangani operasional toko harian dan pelayanan pelanggan.
-      </p>
+      <p>Menangani operasional toko harian.</p>
       <h4>Tugas:</h4>
       <ul>
         <li>Melayani pembeli</li>
         <li>Menata barang</li>
-        <li>Mencatat stok</li>
-        <li>Menjaga kebersihan area kerja</li>
+        <li>Stok</li>
+        <li>Menjaga kebersihan</li>
       </ul>
-
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Ramah & komunikatif</li>
-        <li>Teliti & rapi</li>
-        <li>Mampu bekerja berdiri</li>
-        <li>Jujur & bertanggung jawab</li>
+        <li>Ramah</li>
+        <li>Teliti</li>
+        <li>Bisa berdiri lama</li>
+        <li>Jujur</li>
       </ul>
     </div>
 
+    <!-- —————— Helper —————— -->
     <div class="card">
       <h3>Asisten Pribadi / Helper</h3>
-      <p>
-        Tugas operasional ringan seperti kurir internal, admin sederhana, dan bantuan aktivitas harian.
-      </p>
+      <p>Tugas operasional ringan seperti kurir dan admin sederhana.</p>
       <h4>Tugas:</h4>
       <ul>
-        <li>Membantu administrasi</li>
-        <li>Mengantar dokumen</li>
-        <li>Mengelola kebutuhan operasional</li>
-        <li>Back-up tugas kantor/rumah</li>
+        <li>Administrasi</li>
+        <li>Kurir dokumen</li>
+        <li>Operasional harian</li>
+        <li>Back-up kantor</li>
       </ul>
-
       <h4>Persyaratan:</h4>
       <ul>
-        <li>Pandai berkomunikasi</li>
-        <li>Cekatan & bisa multitasking</li>
-        <li>Disiplin & tertata</li>
-        <li>Berpenampilan rapi</li>
+        <li>Komunikatif</li>
+        <li>Cekatan</li>
+        <li>Disiplin</li>
+        <li>Rapi</li>
       </ul>
     </div>
 
   </div>
 </section>
 
+
+
 <section>
   <h2>Akses Informasi Sistem Gaji</h2>
-  <p>Klik tombol berikut setelah membuka kunci akses:</p>
+  <p>Gunakan tombol berikut untuk membuka dokumen:</p>
 
+  <!-- ISLAND BUTTON -->
+  <button class="island-btn" id="btnSistemGaji">
+    Lihat Sistem Gaji
+  </button>
+
+  <br><br>
+
+  <!-- FOOTER LOCK BUTTON -->
   <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
+
 </section>
 
-<footer>© 2025 Assistenku</footer>
 
+<footer>© 2025 Assistenku</footer>
 <script src="/script.js"></script>
+
 </body>
-</html>
+        </html>
