--- a/karir.html
+++ b/karir.html
@@ -38,11 +38,11 @@
 <section style="padding-top:130px;">
   <h2>Karir di Assistenku</h2>
   <p>
-    Assistenku membuka peluang karir bagi tenaga kerja yang ingin berkembang secara profesional,
+    Assistenku membuka peluang karir bagi tenaga kerja yang ingin berkembang secara profesional, 
     memiliki komitmen terhadap pelayanan, dan siap menjalani standar kerja modern.
   </p>
   <p>
-    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat.
+    Rekrutmen dilakukan dengan proses yang jelas, transparan, dan memperhatikan kenyamanan kandidat. 
     Kami selalu mencari individu yang terpercaya, jujur, sopan, dan memiliki semangat belajar tinggi.
   </p>
 </section>
@@ -53,21 +53,17 @@
 
   <div class="card-grid">
 
-    <!-- semua kartu lowongan tetap sama -->
-    <!-- (saya tidak mengubah apa pun) -->
-
-    <!-- —————— ART —————— -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
       <p>Membantu keluarga menjaga kebersihan dan kenyamanan rumah.</p>
-      <h4>Tugas:</h4>
+      <strong>Tugas:</strong>
       <ul>
         <li>Membersihkan rumah</li>
         <li>Mencuci & menyetrika</li>
         <li>Masakan dasar</li>
         <li>Mengelola rumah tangga</li>
       </ul>
-      <h4>Persyaratan:</h4>
+      <strong>Persyaratan:</strong>
       <ul>
         <li>Usia minimal 18 tahun</li>
         <li>Sehat jasmani</li>
@@ -76,18 +72,17 @@
       </ul>
     </div>
 
-    <!-- —————— Caregiver —————— -->
     <div class="card">
       <h3>Caregiver / Pendamping Lansia</h3>
       <p>Merawat dan mendampingi lansia dengan sabar dan profesional.</p>
-      <h4>Tugas:</h4>
+      <strong>Tugas:</strong>
       <ul>
         <li>Membantu aktivitas harian</li>
         <li>Mengawasi jadwal obat</li>
         <li>Membantu mobilitas</li>
         <li>Menjaga kenyamanan lansia</li>
       </ul>
-      <h4>Persyaratan:</h4>
+      <strong>Persyaratan:</strong>
       <ul>
         <li>Usia 20–45 tahun</li>
         <li>Sehat jasmani</li>
@@ -96,18 +91,17 @@
       </ul>
     </div>
 
-    <!-- —————— Sopir —————— -->
     <div class="card">
       <h3>Sopir Pribadi</h3>
       <p>Mengemudi secara aman dan profesional.</p>
-      <h4>Tugas:</h4>
+      <strong>Tugas:</strong>
       <ul>
         <li>Antar jemput</li>
         <li>Perawatan kendaraan</li>
         <li>Navigasi jalan</li>
         <li>Mengemudi defensif</li>
       </ul>
-      <h4>Persyaratan:</h4>
+      <strong>Persyaratan:</strong>
       <ul>
         <li>SIM A aktif</li>
         <li>Berpengalaman</li>
@@ -116,18 +110,17 @@
       </ul>
     </div>
 
-    <!-- —————— Toko —————— -->
     <div class="card">
       <h3>Penjaga Toko</h3>
       <p>Menangani operasional toko harian.</p>
-      <h4>Tugas:</h4>
+      <strong>Tugas:</strong>
       <ul>
         <li>Melayani pembeli</li>
         <li>Menata barang</li>
-        <li>Stok</li>
-        <li>Menjaga kebersihan</li>
+        <li>Stok barang</li>
+        <li>Menjaga kebersihan area kerja</li>
       </ul>
-      <h4>Persyaratan:</h4>
+      <strong>Persyaratan:</strong>
       <ul>
         <li>Ramah</li>
         <li>Teliti</li>
@@ -136,18 +129,17 @@
       </ul>
     </div>
 
-    <!-- —————— Helper —————— -->
     <div class="card">
       <h3>Asisten Pribadi / Helper</h3>
       <p>Tugas operasional ringan seperti kurir dan admin sederhana.</p>
-      <h4>Tugas:</h4>
+      <strong>Tugas:</strong>
       <ul>
         <li>Administrasi</li>
         <li>Kurir dokumen</li>
         <li>Operasional harian</li>
         <li>Back-up kantor</li>
       </ul>
-      <h4>Persyaratan:</h4>
+      <strong>Persyaratan:</strong>
       <ul>
         <li>Komunikatif</li>
         <li>Cekatan</li>
@@ -160,9 +152,9 @@
 </section>
 
 
-
 <section>
   <h2>Akses Informasi Sistem Gaji</h2>
+
   <p>Gunakan tombol berikut untuk membuka dokumen:</p>
 
   <!-- ISLAND BUTTON -->
@@ -174,12 +166,11 @@
 
   <!-- FOOTER LOCK BUTTON -->
   <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
-
 </section>
 
 
 <footer>© 2025 Assistenku</footer>
-<script src="/script.js"></script>
 
+<script src="/script.js"></script>
 </body>
-        </html>
+  </html>
