--- a/index.html
+++ b/index.html
@@ -1,48 +1,76 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assistenku</title>
-  <link rel="stylesheet" href="/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Beranda | Assistenku</title>
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
 
 <header>
+  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
+
   <div class="navbar">
+    <img src="/logo.png" class="logo">
 
-    <img src="/logo.png" class="logo" alt="Logo Assistenku">
-
-    <nav class="nav-links">
-      <a href="/" class="active">Beranda</a>
-      <a href="/profil">Profil</a>
-      <a href="/layanan">Layanan</a>
-      <a href="/karir">Karir</a>
-      <a href="/kontak">Kontak</a>
+    <nav>
+      <ul>
+        <li><a href="/" class="active">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
+      </ul>
     </nav>
 
-    <div class="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+    <div id="menuIcon">☰</div>
+  </div>
 
+  <div id="mobileMenu">
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
 </header>
 
-<section class="hero">
+<section style="padding-top:160px;">
   <h1>Selamat Datang di Assistenku</h1>
+
   <p>
-    Assistenku merupakan layanan asistensi modern untuk keluarga dan bisnis.
-    Dengan proses sederhana, tenaga kerja terlatih, dan pelayanan profesional.
+    Kehidupan modern menuntut kita bergerak cepat, fokus, dan efisien. Di tengah
+    kesibukan itu, kami percaya bahwa setiap orang berhak mendapatkan bantuan
+    yang aman, profesional, dan dapat diandalkan. Assistenku hadir sebagai partner
+    terpercaya yang mendampingi keluarga, individu, maupun bisnis—memberikan
+    ketenangan, kerapian, dan kenyamanan dalam kegiatan sehari-hari.
   </p>
 
-  <a href="/layanan" class="btn-primary">Lihat Layanan</a>
+  <p>
+    Dengan tenaga kerja terlatih, proses seleksi ketat, serta standar pelayanan
+    yang berorientasi pada keamanan dan kejujuran, Assistenku memastikan Anda
+    mendapatkan pengalaman terbaik dari setiap layanan yang kami sediakan.
+  </p>
+
+  <h2>Visi Kami</h2>
+  <p>
+    Menjadi layanan asistensi paling terpercaya dan mudah diakses di Indonesia,
+    yang menghadirkan ketenangan dan kenyamanan bagi setiap rumah dan bisnis.
+  </p>
+
+  <h2>Misi Kami</h2>
+  <p>• Menyediakan tenaga kerja yang terlatih dan beretika tinggi.</p>
+  <p>• Menjaga kualitas layanan dengan proses manajemen modern.</p>
+  <p>• Membantu keluarga dan bisnis menjalankan kehidupan lebih efisien.</p>
+  <p>• Mengedepankan keamanan, kenyamanan, dan profesionalitas.</p>
+
+  <br>
+  <a href="/layanan" class="btn-primary">Lihat Layanan Kami</a>
 </section>
 
 <footer>© 2025 Assistenku</footer>
-
 <script src="/script.js"></script>
 </body>
 </html>
