--- a/profil.html
+++ b/profil.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profil | Assistenku</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
 
 <header>
+  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
+
   <div class="navbar">
     <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
@@ -35,27 +37,73 @@
   </div>
 </header>
 
-<section style="padding-top:130px;">
-  <h2>Profil Perusahaan</h2>
+<!-- ================================
+     PROFILE CONTENT
+================================ -->
+
+<section style="padding-top:160px;">
+  <h1>Profil Perusahaan</h1>
+
   <p>
-    Assistenku adalah penyedia layanan asistensi profesional yang berdiri untuk membantu keluarga
-    dan perusahaan dalam memenuhi kebutuhan sumber daya manusia harian. Kami fokus pada kualitas,
-    keamanan, dan kenyamanan—menghadirkan tenaga kerja terlatih yang siap memberikan pelayanan terbaik.
+    Assistenku lahir dari sebuah perjalanan panjang yang berangkat dari realita kehidupan modern:
+    masyarakat semakin sibuk, ritme kerja semakin cepat, dan kebutuhan akan bantuan profesional
+    semakin tak terhindarkan. Di titik itulah Assistenku hadir — bukan sekadar penyedia tenaga
+    kerja, tetapi sebagai <strong>mitra yang memahami</strong> perlunya kenyamanan, keamanan, dan ketenangan
+    dalam aktivitas sehari-hari.
+  </p>
+
+  <p>
+    Assistenku dibangun dengan satu tujuan: <strong>menciptakan pengalaman layanan asistensi yang mudah,
+    terpercaya, dan manusiawi.</strong> Kami ingin setiap keluarga dan pelaku bisnis merasa bahwa ada pihak
+    yang benar-benar mereka bisa andalkan — bukan hanya untuk bekerja, tetapi juga untuk menjaga
+    nilai dan kepercayaan.
   </p>
 </section>
 
 <section>
-  <h2>Sejarah Singkat</h2>
+  <h2>Sejarah Berdirinya Assistenku</h2>
+
   <p>
-    Assistenku berawal dari kebutuhan masyarakat modern yang semakin kompleks. Meningkatnya kesibukan
-    kerja membuat keluarga dan bisnis membutuhkan tenaga profesional yang dapat dipercaya.
-    Pada tahun 2023, Assistenku didirikan oleh individu dengan pengalaman operasional, HR, dan layanan publik.
-    Sejak itu, kami menghadirkan layanan ART, babysitter, driver, kebersihan, dan asistensi bisnis skala kecil hingga besar.
+    Pada tahun 2023, pendiri Assistenku melihat bahwa banyak keluarga dan usaha kecil mengalami
+    kesulitan menemukan tenaga kerja yang jujur, terlatih, dan profesional. Banyak proses
+    perekrutan yang rumit, tidak transparan, dan sering kali tidak memberikan jaminan apa pun.
+  </p>
+
+  <p>
+    Dari pengalaman itu, lahirlah tekad untuk membangun sebuah layanan yang berbeda: layanan
+    yang mengutamakan <strong>kualitas, kejujuran, standar etika, dan keamanan</strong>. Assistenku mulai
+    dirancang dengan sistem modern, manajemen yang lebih tertata, serta alur rekrutmen dan
+    pelatihan yang jauh lebih profesional.
+  </p>
+
+  <p>
+    Visi tersebut berkembang, dan Assistenku kini menjadi salah satu platform asistensi modern
+    yang menggabungkan nilai manusiawi dengan pendekatan kerja yang efisien dan terstruktur.
   </p>
 </section>
 
 <section>
-  <h2>Founder & Manajemen</h2>
+  <h2>Visi Perusahaan</h2>
+
+  <p>
+    Menjadi penyedia layanan asistensi paling terpercaya, modern, dan mudah diakses di Indonesia —
+    menghadirkan kenyamanan dan ketenangan bagi setiap keluarga serta pelaku usaha.
+  </p>
+
+  <h2>Misi Perusahaan</h2>
+
+  <p>• Menyediakan tenaga kerja yang terlatih, beretika, dan bertanggung jawab.</p>
+  <p>• Menjaga kualitas pelayanan melalui manajemen yang modern dan terstruktur.</p>
+  <p>• Menghadirkan pengalaman layanan asistensi yang mudah diakses dan transparan.</p>
+  <p>• Mengutamakan keamanan, kenyamanan, dan hubungan jangka panjang dengan klien.</p>
+</section>
+
+<!-- ================================
+     FOUNDER SECTION
+================================ -->
+
+<section>
+  <h2>Founder & Co-Founder</h2>
 
   <div class="card-grid">
 
@@ -63,9 +111,11 @@
       <img src="/founder1.png" class="founder-img">
       <h3>Abdurrahman Hanif</h3>
       <p>
-        Memiliki pengalaman bertahun-tahun di bidang asistensi, layanan publik,
-        dan manajemen operasional. Fokus membangun ekosistem layanan profesional
-        yang mudah diakses, aman, dan memberikan dampak positif bagi keluarga maupun bisnis.
+        Founder Assistenku. Memiliki pengalaman dalam operasional, manajemen layanan,
+        dan penanganan kebutuhan asistensi modern. Hanif membangun Assistenku
+        dengan prinsip bahwa pelayanan terbaik dimulai dari kepercayaan dan
+        profesionalitas. Fokus utamanya adalah memastikan seluruh layanan berjalan
+        dengan standar tinggi dan tetap mudah diakses oleh masyarakat.
       </p>
     </div>
 
@@ -73,14 +123,19 @@
       <img src="/founder2.png" class="founder-img">
       <h3>Putri Rahmadani</h3>
       <p>
-        Spesialis dalam perekrutan, pelatihan, dan pengembangan tenaga kerja rumah tangga,
-        pengasuh bayi dan lansia, serta asistensi pribadi. Menyusun standar kualitas SDM
-        untuk memastikan klien mendapatkan pelayanan terbaik.
+        Co-Founder Assistenku. Memiliki keahlian di bidang rekrutmen dan pengembangan
+        tenaga kerja rumah tangga, caregiver, dan asistensi pribadi. Putri menyusun
+        kurikulum pelatihan dan standar kualitas SDM sehingga setiap tenaga kerja
+        yang dikirimkan memiliki sikap, keterampilan, dan etika kerja yang baik.
       </p>
     </div>
 
   </div>
 </section>
+
+<!-- ================================
+     LEGAL SECTION
+================================ -->
 
 <section>
   <h2>Legalitas Perusahaan</h2>
@@ -89,17 +144,17 @@
 
     <div class="card">
       <h3>NIB Resmi</h3>
-      <p>Nomor Induk Berusaha resmi terdaftar sebagai penyedia jasa tenaga kerja.</p>
+      <p>Dokumen resmi yang membuktikan perusahaan telah terdaftar secara legal.</p>
       <img src="/NIB1.png" class="legal-img">
     </div>
 
     <div class="card">
-      <h3>Legalitas Tambahan</h3>
-      <p>Dokumen izin, sertifikasi, dan standar operasional yang sudah terverifikasi.</p>
+      <h3>Dokumen Legal Tambahan</h3>
+      <p>Dokumen pendukung usaha, sertifikasi, dan perizinan tambahan yang sah.</p>
       <img src="/NIB2.png" class="legal-img">
 
       <a href="https://drive.google.com/file/d/1TJ4qqdZdXXKlYvrIMAr_CaIwQ8dOvsDj/view?usp=drivesdk"
-         class="btn-primary" target="_blank">
+         target="_blank" class="btn-primary">
         Lihat Semua Dokumen Legalitas
       </a>
     </div>
@@ -108,7 +163,6 @@
 </section>
 
 <footer>© 2025 Assistenku</footer>
-
 <script src="/script.js"></script>
 </body>
 </html>
