--- a/kontak.html
+++ b/kontak.html
@@ -2,16 +2,18 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta-name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontak | Assistenku</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
 
 <header>
+  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
+
   <div class="navbar">
-    <img src="/logo.png" class="logo">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
     <nav>
       <ul>
@@ -35,35 +37,58 @@
   </div>
 </header>
 
-<section style="padding-top:130px;">
-  <h2>Hubungi Kami</h2>
-  <p>Silakan hubungi kami melalui:</p>
+
+
+<!-- =============================
+     HERO
+============================= -->
+<section style="padding-top:160px;">
+  <h1>Hubungi Kami</h1>
+
+  <p>
+    Kami siap membantu Anda kapan saja. Jika Anda memiliki pertanyaan mengenai layanan,
+    perekrutan, atau ingin berkonsultasi sebelum memesan, silakan hubungi kami melalui
+    pilihan kontak berikut. Tim Assistenku akan membalas dengan ramah dan profesional.
+  </p>
+</section>
+
+
+
+<!-- =============================
+     KONTAK CARD
+============================= -->
+<section>
+  <h2>Informasi Kontak</h2>
 
   <div class="card-grid">
 
     <div class="card">
-      <h3>WhatsApp</h3>
-      <a class="btn-primary" href="https://wa.me/628989760020" target="_blank">
-        Chat WhatsApp
+      <h3>WhatsApp Resmi</h3>
+      <p>Hubungi kami untuk pertanyaan apa pun.</p>
+      <a class="btn-primary" href="https://wa.me/628986570020" target="_blank">
+        Hubungi via WhatsApp
       </a>
     </div>
 
     <div class="card">
       <h3>Email Informasi Layanan</h3>
+      <p>Untuk pertanyaan seputar pemesanan layanan.</p>
       <a class="btn-primary" href="mailto:kontakassistenku@gmail.com">
-        Kirim Email
+        Email Layanan
       </a>
     </div>
 
     <div class="card">
       <h3>Email Lowongan Kerja</h3>
+      <p>Untuk pertanyaan mengenai rekrutmen dan lamaran kerja.</p>
       <a class="btn-primary" href="mailto:karirassistenku@gmail.com">
-        Kirim Email
+        Email Rekrutmen
       </a>
     </div>
 
   </div>
 </section>
+
 
 <footer>© 2025 Assistenku</footer>
 
