--- a/karir.html
+++ b/karir.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta-name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karir | Assistenku</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
@@ -15,260 +15,151 @@
   <div class="navbar">
     <img src="/logo.png" class="logo" alt="Logo Assistenku">
 
-    <nav>
-      <ul>
-        <li><a href="/">Beranda</a></li>
-        <li><a href="/profil">Profil</a></li>
-        <li><a href="/layanan">Layanan</a></li>
-        <li><a href="/karir" class="active">Karir</a></li>
-        <li><a href="/kontak">Kontak</a></li>
-      </ul>
+    <nav class="nav-links">
+      <a href="/index.html">Beranda</a>
+      <a href="/profil.html">Profil</a>
+      <a href="/layanan.html">Layanan</a>
+      <a href="/karir.html" class="active">Karir</a>
+      <a href="/kontak.html">Kontak</a>
     </nav>
 
-    <div id="menuIcon">☰</div>
-  </div>
-
-  <div id="mobileMenu">
-    <a href="/">Beranda</a>
-    <a href="/profil">Profil</a>
-    <a href="/layanan">Layanan</a>
-    <a href="/karir">Karir</a>
-    <a href="/kontak">Kontak</a>
+    <div class="hamburger">
+      <span></span><span></span><span></span>
+    </div>
   </div>
 </header>
 
 
-<!-- =============================
-     HERO
-============================= -->
-<section style="padding-top:160px;">
+<section class="page-section">
   <h1>Karir di Assistenku</h1>
-
   <p>
-    Assistenku membuka kesempatan bagi tenaga kerja yang memiliki semangat, kejujuran,
-    dan keinginan untuk berkembang. Kami percaya bahwa setiap individu berhak mendapatkan
-    peluang yang jelas, proses rekrutmen yang manusiawi, serta lingkungan kerja yang aman.
+    Assistenku membuka kesempatan bagi tenaga kerja yang jujur, disiplin, dan
+    ingin berkembang. Kami percaya bahwa setiap individu berhak mendapat peluang
+    kerja yang jelas, manusiawi, dan aman.
   </p>
 
   <p>
-    Sejak awal berdiri, Assistenku berkomitmen menghadirkan sistem kerja yang tertata,
-    transparan, dan menghargai setiap kontribusi tenaga kerja. Kami ingin menjadi tempat
-    yang memberikan harapan baru, peluang baru, dan masa depan yang lebih baik bagi
-    siapa pun yang ingin bekerja dengan profesional.
+    Semua tenaga kerja mendapatkan bimbingan awal, pengarahan, dan dukungan
+    agar siap ditempatkan di lingkungan kerja yang profesional.
   </p>
 </section>
 
 
-<!-- =============================
-     LOWONGAN
-============================= -->
 <section>
   <h2>Lowongan Tersedia</h2>
 
-  <p>
-    Berikut daftar posisi yang saat ini tersedia. Jika Anda memiliki sikap baik,
-    mau belajar, disiplin, dan bisa bertanggung jawab, Anda sudah memenuhi
-    syarat dasar untuk melamar ke Assistenku.
-  </p>
-
   <div class="card-grid">
 
-    <!-- ART -->
     <div class="card">
       <h3>Asisten Rumah Tangga (ART)</h3>
-      <p>
-        Membantu keluarga menjaga kebersihan dan kerapian rumah dengan standar kerja
-        yang sopan, disiplin, dan profesional.
-      </p>
+      <p>Membantu pekerjaan rumah dengan rapi dan profesional.</p>
+
       <strong>Tugas:</strong>
       <ul>
         <li>Pembersihan rumah</li>
         <li>Mencuci & menyetrika</li>
-        <li>Menjaga kerapian</li>
-        <li>Mengelola kebutuhan dasar rumah tangga</li>
+        <li>Memasak dasar</li>
       </ul>
 
-      <strong>Persyaratan Melamar:</strong>
+      <strong>Syarat:</strong>
       <ul>
         <li>Usia 18–50 tahun</li>
         <li>Sehat jasmani</li>
         <li>Jujur & bertanggung jawab</li>
-        <li>Bisa tinggal di tempat atau pulang-pergi</li>
       </ul>
 
       <div class="apply-box">
-        <a class="btn-primary" 
-           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20ART."
-           target="_blank">Lamar via WhatsApp</a>
-        <a class="btn-secondary"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Posisi%20ART"
-           target="_blank">Kirim via Email</a>
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20ART">Lamar via WhatsApp</a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20ART">Kirim via Email</a>
       </div>
     </div>
 
 
-    <!-- CAREGIVER -->
     <div class="card">
       <h3>Pendamping Lansia</h3>
-      <p>
-        Mendampingi lansia dengan penuh kesabaran, menjaga kenyamanan, keamanan,
-        dan membantu aktivitas harian.
-      </p>
+      <p>Mendampingi lansia dengan kesabaran dan empati.</p>
+
       <strong>Tugas:</strong>
       <ul>
         <li>Pendamping aktivitas</li>
-        <li>Perawatan harian ringan</li>
-        <li>Membantu mobilitas</li>
+        <li>Bantuan harian</li>
         <li>Sahabat bicara</li>
       </ul>
 
-      <strong>Persyaratan Melamar:</strong>
+      <strong>Syarat:</strong>
       <ul>
         <li>Usia 20–45 tahun</li>
-        <li>Sabar & tidak mudah emosi</li>
+        <li>Sabar & sopan</li>
         <li>Sehat jasmani</li>
-        <li>Sopan dalam komunikasi</li>
       </ul>
 
       <div class="apply-box">
-        <a class="btn-primary" 
-           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Pendamping%20Lansia."
-           target="_blank">Lamar via WhatsApp</a>
-        <a class="btn-secondary"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Pendamping%20Lansia"
-           target="_blank">Kirim via Email</a>
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Pendamping%20Lansia">Lamar via WhatsApp</a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Pendamping%20Lansia">Kirim via Email</a>
       </div>
     </div>
 
 
-    <!-- DRIVER -->
     <div class="card">
       <h3>Pengemudi Pribadi</h3>
-      <p>
-        Mengemudi secara aman, sopan, dan profesional untuk kebutuhan keluarga
-        maupun bisnis.
-      </p>
+      <p>Mengemudi aman dan profesional untuk keluarga atau bisnis.</p>
+
       <strong>Tugas:</strong>
       <ul>
-        <li>Antar jemput harian</li>
+        <li>Antar jemput</li>
         <li>Perawatan kendaraan dasar</li>
-        <li>Navigasi & rute</li>
         <li>Mengemudi defensif</li>
       </ul>
 
-      <strong>Persyaratan Melamar:</strong>
+      <strong>Syarat:</strong>
       <ul>
-        <li>Memiliki SIM A aktif</li>
-        <li>Disiplin waktu</li>
-        <li>Sopan dalam sikap & ucapan</li>
-        <li>Bisa kerja lembur jika dibutuhkan</li>
+        <li>SIM A aktif</li>
+        <li>Disiplin & sopan</li>
       </ul>
 
       <div class="apply-box">
-        <a class="btn-primary" 
-           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Driver."
-           target="_blank">Lamar via WhatsApp</a>
-        <a class="btn-secondary"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Driver"
-           target="_blank">Kirim via Email</a>
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Driver">Lamar via WhatsApp</a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Driver">Kirim via Email</a>
       </div>
     </div>
 
 
-    <!-- TOKO -->
     <div class="card">
       <h3>Penjaga Toko</h3>
-      <p>
-        Menangani kebutuhan operasional toko dengan pelayanan ramah dan
-        ketelitian dalam bekerja.
-      </p>
+      <p>Melayani pembeli, menata barang, dan menjaga kebersihan toko.</p>
+
       <strong>Tugas:</strong>
       <ul>
         <li>Melayani pembeli</li>
-        <li>Menata & menyiapkan barang</li>
+        <li>Menata barang</li>
         <li>Mengelola stok</li>
-        <li>Menjaga kebersihan</li>
       </ul>
 
-      <strong>Persyaratan Melamar:</strong>
+      <strong>Syarat:</strong>
       <ul>
-        <li>Ramah dan komunikatif</li>
-        <li>Teliti & rapi</li>
+        <li>Ramah & komunikatif</li>
+        <li>Teliti</li>
         <li>Siap berdiri lama</li>
-        <li>Bertanggung jawab</li>
       </ul>
 
       <div class="apply-box">
-        <a class="btn-primary" 
-           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Penjaga%20Toko."
-           target="_blank">Lamar via WhatsApp</a>
-        <a class="btn-secondary"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Penjaga%20Toko"
-           target="_blank">Kirim via Email</a>
-      </div>
-    </div>
-
-
-    <!-- HELPER -->
-    <div class="card">
-      <h3>Asisten Operasional (Helper)</h3>
-      <p>
-        Membantu operasional ringan rumah tangga maupun kantor seperti admin,
-        kurir internal, hingga pekerjaan pendukung.
-      </p>
-      <strong>Tugas:</strong>
-      <ul>
-        <li>Kurir dokumen</li>
-        <li>Admin ringan</li>
-        <li>Bantuan operasional</li>
-        <li>Back-up harian</li>
-      </ul>
-
-      <strong>Persyaratan Melamar:</strong>
-      <ul>
-        <li>Cekatan & cepat belajar</li>
-        <li>Komunikatif</li>
-        <li>Disiplin</li>
-        <li>Rapi & sopan</li>
-      </ul>
-
-      <div class="apply-box">
-        <a class="btn-primary" 
-           href="https://wa.me/628986570020?text=Halo%20Assistenku,%20saya%20ingin%20melamar%20posisi%20Asisten%20Operasional."
-           target="_blank">Lamar via WhatsApp</a>
-        <a class="btn-secondary"
-           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Asisten%20Operasional"
-           target="_blank">Kirim via Email</a>
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628986570020?text=Saya%20ingin%20melamar%20Penjaga%20Toko">Lamar via WhatsApp</a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:karirassistenku@gmail.com?subject=Lamaran%20Penjaga%20Toko">Kirim via Email</a>
       </div>
     </div>
 
   </div>
 </section>
 
-
-<!-- =============================
-     AKSES DOKUMEN GAJI
-============================= -->
-<section>
-  <h2>Informasi Sistem Gaji</h2>
-  <p>
-    Assistenku menyediakan dokumen resmi mengenai sistem kerja dan gaji. Dokumen hanya
-    bisa dibuka oleh pelamar serius untuk menjaga kerahasiaan internal.
-  </p>
-
-  <button class="island-btn" id="btnSistemGaji">
-    Buka Dokumen Sistem Gaji
-  </button>
-
-  <br><br>
-
-  <button id="lockBtn" class="lock-button locked">🔒 Akses Terkunci</button>
-</section>
-
-
 <footer>© 2025 Assistenku</footer>
-
 <script src="/script.js"></script>
-
 </body>
 </html>
