--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <nav>
       <ul>
-        <li><a href="/" class="active">Beranda</a></li>
-        <li><a href="/profil">Profil</a></li>
-        <li><a href="/layanan">Layanan</a></li>
-        <li><a href="/karir">Karir</a></li>
-        <li><a href="/kontak">Kontak</a></li>
+        <li><a href="/" class="nav-beranda active">Beranda</a></li>
+        <li><a href="/profil" class="nav-profil">Profil</a></li>
+        <li><a href="/layanan" class="nav-layanan">Layanan</a></li>
+        <li><a href="/karir" class="nav-karir">Karir</a></li>
+        <li><a href="/kontak" class="nav-kontak">Kontak</a></li>
       </ul>
     </nav>
 
@@ -29,11 +29,11 @@
   </div>
 
   <div id="mobileMenu">
-    <a href="/">Beranda</a>
-    <a href="/profil">Profil</a>
-    <a href="/layanan">Layanan</a>
-    <a href="/karir">Karir</a>
-    <a href="/kontak">Kontak</a>
+    <a href="/" class="nav-beranda active">Beranda</a>
+    <a href="/profil" class="nav-profil">Profil</a>
+    <a href="/layanan" class="nav-layanan">Layanan</a>
+    <a href="/karir" class="nav-karir">Karir</a>
+    <a href="/kontak" class="nav-kontak">Kontak</a>
   </div>
 </header>
 
